// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GamesView should render 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="header"
    >
      <div
        class="headerLeft"
      >
        <a
          href="/"
        >
          <svg
            class="navIcon"
          >
            chevron-left.svg
          </svg>
        </a>
      </div>
      <div
        class="headerCenter"
      >
        <h1
          class="title"
        >
          Hår
        </h1>
      </div>
      <div
        class="headerRight"
      >
        <svg
          class="settingsIcon"
        >
          filters.svg
        </svg>
      </div>
    </div>
    <div
      class="filterBar"
    >
      <div
        class="filterBarHeader"
      >
        <div
          class="filterBarLeft"
        >
          <span>
            Price $0 - $100
          </span>
        </div>
        <div
          class="filterBarRight"
        >
          <span
            class="filterBarToggle"
            role="button"
            tabindex="0"
          >
            <svg>
              chevron-left.svg
            </svg>
          </span>
        </div>
      </div>
      <div
        class="filterBarBody"
      >
        <div
          class="filterBarText"
        >
          Searching for salons with price between $
        </div>
        <div
          class="minPrice"
        >
          <input
            class="priceInput"
            data-testid="min-price"
            id="min-price"
            placeholder="0"
            type="number"
            value="0"
          />
        </div>
        <div
          class="filterBarText"
        >
          and $ 
        </div>
        <div
          class="maxPrice"
        >
          <input
            class="priceInput"
            data-testid="max-price"
            id="max-price"
            placeholder="100"
            type="number"
            value="100"
          />
        </div>
      </div>
    </div>
    <div
      class="salonList"
    >
      <a
        class="salonRowWrapper"
        href="/salons/2"
      >
        <div
          class="container"
          data-testid="salon-row"
        >
          <div
            class="rowContent"
          >
            <div
              class="rowLeft"
            >
              <span>
                12:00
              </span>
            </div>
            <div
              class="rowCenter"
            >
              <h2
                class="salonName"
              >
                Schuster Group
              </h2>
              <div
                class="salonRating"
              >
                <div
                  class="salonStars"
                >
                  <span
                    class="star"
                  >
                    <svg>
                      star-filled.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-empty.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-empty.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-empty.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-empty.svg
                    </svg>
                  </span>
                </div>
                <div
                  class="salonFeedbackCount"
                >
                  (5)
                </div>
              </div>
              <div
                class="salonAddress"
              >
                060 Ramsey Point
              </div>
            </div>
            <div
              class="rowRight"
            >
              <div
                class="salonPrice"
              >
                $70
              </div>
              <div
                class="salonDuration"
              >
                50 min
              </div>
            </div>
          </div>
          <div
            class="rowNav"
          >
            <svg
              class="rowNavIcon"
            >
              chevron-left.svg
            </svg>
          </div>
        </div>
      </a>
      <a
        class="salonRowWrapper"
        href="/salons/3"
      >
        <div
          class="container"
          data-testid="salon-row"
        >
          <div
            class="rowContent"
          >
            <div
              class="rowLeft"
            >
              <span>
                12:00
              </span>
            </div>
            <div
              class="rowCenter"
            >
              <h2
                class="salonName"
              >
                Gottlieb, McLaughlin and Reinger
              </h2>
              <div
                class="salonRating"
              >
                <div
                  class="salonStars"
                >
                  <span
                    class="star"
                  >
                    <svg>
                      star-filled.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-filled.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-empty.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-empty.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-empty.svg
                    </svg>
                  </span>
                </div>
                <div
                  class="salonFeedbackCount"
                >
                  (153)
                </div>
              </div>
              <div
                class="salonAddress"
              >
                171 Vera Junction
              </div>
            </div>
            <div
              class="rowRight"
            >
              <div
                class="salonPrice"
              >
                $80
              </div>
              <div
                class="salonDuration"
              >
                30 min
              </div>
            </div>
          </div>
          <div
            class="rowNav"
          >
            <svg
              class="rowNavIcon"
            >
              chevron-left.svg
            </svg>
          </div>
        </div>
      </a>
      <a
        class="salonRowWrapper"
        href="/salons/4"
      >
        <div
          class="container"
          data-testid="salon-row"
        >
          <div
            class="rowContent"
          >
            <div
              class="rowLeft"
            >
              <span>
                21:30
              </span>
            </div>
            <div
              class="rowCenter"
            >
              <h2
                class="salonName"
              >
                Zemlak-Gerlach
              </h2>
              <div
                class="salonRating"
              >
                <div
                  class="salonStars"
                >
                  <span
                    class="star"
                  >
                    <svg>
                      star-filled.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-filled.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-filled.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-empty.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-empty.svg
                    </svg>
                  </span>
                </div>
                <div
                  class="salonFeedbackCount"
                >
                  (58)
                </div>
              </div>
              <div
                class="salonAddress"
              >
                1479 Southridge Alley
              </div>
            </div>
            <div
              class="rowRight"
            >
              <div
                class="salonPrice"
              >
                $80
              </div>
              <div
                class="salonDuration"
              >
                50 min
              </div>
            </div>
          </div>
          <div
            class="rowNav"
          >
            <svg
              class="rowNavIcon"
            >
              chevron-left.svg
            </svg>
          </div>
        </div>
      </a>
      <a
        class="salonRowWrapper"
        href="/salons/6"
      >
        <div
          class="container"
          data-testid="salon-row"
        >
          <div
            class="rowContent"
          >
            <div
              class="rowLeft"
            >
              <span>
                10:00
              </span>
            </div>
            <div
              class="rowCenter"
            >
              <h2
                class="salonName"
              >
                Lockman LLC
              </h2>
              <div
                class="salonRating"
              >
                <div
                  class="salonStars"
                >
                  <span
                    class="star"
                  >
                    <svg>
                      star-filled.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-filled.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-empty.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-empty.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-empty.svg
                    </svg>
                  </span>
                </div>
                <div
                  class="salonFeedbackCount"
                >
                  (172)
                </div>
              </div>
              <div
                class="salonAddress"
              >
                31 New Castle Way
              </div>
            </div>
            <div
              class="rowRight"
            >
              <div
                class="salonPrice"
              >
                $20
              </div>
              <div
                class="salonDuration"
              >
                40 min
              </div>
            </div>
          </div>
          <div
            class="rowNav"
          >
            <svg
              class="rowNavIcon"
            >
              chevron-left.svg
            </svg>
          </div>
        </div>
      </a>
      <a
        class="salonRowWrapper"
        href="/salons/7"
      >
        <div
          class="container"
          data-testid="salon-row"
        >
          <div
            class="rowContent"
          >
            <div
              class="rowLeft"
            >
              <span>
                12:00
              </span>
            </div>
            <div
              class="rowCenter"
            >
              <h2
                class="salonName"
              >
                Hettinger, Turcotte and Hane
              </h2>
              <div
                class="salonRating"
              >
                <div
                  class="salonStars"
                >
                  <span
                    class="star"
                  >
                    <svg>
                      star-filled.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-filled.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-empty.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-empty.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-empty.svg
                    </svg>
                  </span>
                </div>
                <div
                  class="salonFeedbackCount"
                >
                  (152)
                </div>
              </div>
              <div
                class="salonAddress"
              >
                05513 Sutteridge Way
              </div>
            </div>
            <div
              class="rowRight"
            >
              <div
                class="salonPrice"
              >
                $60
              </div>
              <div
                class="salonDuration"
              >
                40 min
              </div>
            </div>
          </div>
          <div
            class="rowNav"
          >
            <svg
              class="rowNavIcon"
            >
              chevron-left.svg
            </svg>
          </div>
        </div>
      </a>
      <a
        class="salonRowWrapper"
        href="/salons/8"
      >
        <div
          class="container"
          data-testid="salon-row"
        >
          <div
            class="rowContent"
          >
            <div
              class="rowLeft"
            >
              <span>
                15:30
              </span>
            </div>
            <div
              class="rowCenter"
            >
              <h2
                class="salonName"
              >
                Hettinger-Brekke
              </h2>
              <div
                class="salonRating"
              >
                <div
                  class="salonStars"
                >
                  <span
                    class="star"
                  >
                    <svg>
                      star-filled.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-empty.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-empty.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-empty.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-empty.svg
                    </svg>
                  </span>
                </div>
                <div
                  class="salonFeedbackCount"
                >
                  (64)
                </div>
              </div>
              <div
                class="salonAddress"
              >
                242 Del Mar Alley
              </div>
            </div>
            <div
              class="rowRight"
            >
              <div
                class="salonPrice"
              >
                $60
              </div>
              <div
                class="salonDuration"
              >
                70 min
              </div>
            </div>
          </div>
          <div
            class="rowNav"
          >
            <svg
              class="rowNavIcon"
            >
              chevron-left.svg
            </svg>
          </div>
        </div>
      </a>
      <a
        class="salonRowWrapper"
        href="/salons/10"
      >
        <div
          class="container"
          data-testid="salon-row"
        >
          <div
            class="rowContent"
          >
            <div
              class="rowLeft"
            >
              <span>
                14:00
              </span>
            </div>
            <div
              class="rowCenter"
            >
              <h2
                class="salonName"
              >
                Kilback, O'Connell and Conn
              </h2>
              <div
                class="salonRating"
              >
                <div
                  class="salonStars"
                >
                  <span
                    class="star"
                  >
                    <svg>
                      star-filled.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-filled.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-filled.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-filled.svg
                    </svg>
                  </span>
                  <span
                    class="star"
                  >
                    <svg>
                      star-empty.svg
                    </svg>
                  </span>
                </div>
                <div
                  class="salonFeedbackCount"
                >
                  (8)
                </div>
              </div>
              <div
                class="salonAddress"
              >
                564 Stoughton Pass
              </div>
            </div>
            <div
              class="rowRight"
            >
              <div
                class="salonPrice"
              >
                $60
              </div>
              <div
                class="salonDuration"
              >
                60 min
              </div>
            </div>
          </div>
          <div
            class="rowNav"
          >
            <svg
              class="rowNavIcon"
            >
              chevron-left.svg
            </svg>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`GamesView should render empty state when necessary 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="header"
    >
      <div
        class="headerLeft"
      >
        <a
          href="/"
        >
          <svg
            class="navIcon"
          >
            chevron-left.svg
          </svg>
        </a>
      </div>
      <div
        class="headerCenter"
      >
        <h1
          class="title"
        >
          Hår
        </h1>
      </div>
      <div
        class="headerRight"
      >
        <svg
          class="settingsIcon"
        >
          filters.svg
        </svg>
      </div>
    </div>
    <div
      class="filterBar"
    >
      <div
        class="filterBarHeader"
      >
        <div
          class="filterBarLeft"
        >
          <span>
            Price $0 - $100
          </span>
        </div>
        <div
          class="filterBarRight"
        >
          <span
            class="filterBarToggle"
            role="button"
            tabindex="0"
          >
            <svg>
              chevron-left.svg
            </svg>
          </span>
        </div>
      </div>
      <div
        class="filterBarBody"
      >
        <div
          class="filterBarText"
        >
          Searching for salons with price between $
        </div>
        <div
          class="minPrice"
        >
          <input
            class="priceInput"
            data-testid="min-price"
            id="min-price"
            placeholder="0"
            type="number"
            value="0"
          />
        </div>
        <div
          class="filterBarText"
        >
          and $ 
        </div>
        <div
          class="maxPrice"
        >
          <input
            class="priceInput"
            data-testid="max-price"
            id="max-price"
            placeholder="100"
            type="number"
            value="100"
          />
        </div>
      </div>
    </div>
    <div
      class="salonList"
    >
      <div
        class="salonListEmpty"
      >
        Sorry no matching salon found.
      </div>
    </div>
  </div>
</div>
`;
